# CPS1012-Operating-Systems-and-Programming-Assignment

./: README.md
assignment-code/: CMakeLists.txt  maintish.c
assignment-code/cps1012/: cities.txt  cities_sorted.txt  grep_file.txt  message.txt
assignment-code/task1/: 1a.c  1b.c  1c.c  1d.c  1e.c  task1.c  task1.h
assignment-code/task2/: 2a.c  2b.c  task2.c  task2.h  task2_builtin_functions.c
assignment-code/task3/: 3a.c  3b.c  3c.c  3d.c  task3.c  task3.h
assignment-code/task4/: 4a.c  4b.c  4c.c  task4.h
